# lrslib-cmake

./: CMakeLists.txt  buffer.c  float2rat.c
cmake/: FindGMP.cmake  lrslibConfig.cmake.in
